comprar entrada listo, faltaria la impresion de ultima boleta y el resumen de ventas del menu principal